--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,17 @@
 buildscript {
     ext {
-        compose_ui_version = '1.1.1'
+        compose_ui_version = '1.3.3'
+        material_design_version = '1.3.1'
+        kotlin_version = '1.8.10'
+    }
+
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.45"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
