--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,16 @@ dependencies {
     // Image
     implementation("io.coil-kt:coil-compose:2.2.0")
 
+    // Unit Test
+    testImplementation "org.mockito:mockito-core:4.0.0"
+    testImplementation "org.mockito:mockito-inline:4.0.0"
     testImplementation 'junit:junit:4.13.2'
+
+    // Test flow
+    testImplementation 'app.cash.turbine:turbine:0.7.0'
+    testImplementation "com.google.truth:truth:1.1.3"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2"
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
